--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+a:link {
+  color: #ce551c;
+}
+
 .head_section {
 	color: white;
+	font-family: 'titillium-semibold',Arial,sans-serif;
 
 	background-image: linear-gradient(to bottom, rgba(110, 53, 0, 0.52), rgba(44, 25, 7, 0.73)), url('adventure.jpg');
 	height: 35em;
@@ -12,14 +17,20 @@
 }
 
 .head_info {
+	font-size: 30px;
 	position: absolute;
-	bottom: 5%;
+	bottom: 15%;
 	left: 10%;
+}
+
+.head_info h4 {
+	font-size: 15px;
+	
 }
 
 .social_net_icons {
 	position: absolute;
-	bottom: 5%;
+	bottom: 15%;
 	right: 10%;
 }
 
