--- a/style.css
+++ b/style.css
@@ -1,1 +1,50 @@
-{\rtf1}
+.parent_container {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 60vh 7vh 1fr;
+	height: 100vh;
+	color: white;
+}
+
+.head_container {
+	background-image: linear-gradient(to bottom, rgba(110, 53, 0, 0.52), rgba(44, 25, 7, 0.73)), url('adventure.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr;
+}
+
+.bar {
+	background-color: #639cd9;
+}
+
+.body_container {
+	background-color: #342056;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+}
+
+.body_container_about {
+
+}
+
+.body_container_info {
+
+}
+
+.body_container_expertise {
+
+}
+
+.body_container_resume {
+	grid-column: 1/4;
+}
+
+
+
+
