--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+a {
+	color: #ffd03f;
+}
+
+.name {
+	font-size: 3.5rem;
+	font-family: "century gothic";
+	font-weight: bold;
+}
+
+.explanation {
+	font-family: Verdana;
+}
+.head_container_contact div {
+	position: relative;
+	right: -10vw;
+	top:47vh;
+
+	font-family: Verdana;
+}
+
+.name, .explanation {
+	position: relative;
+	left: 10vw;
+	top:42vh;
+}
+
 .parent_container {
 	display: grid;
 	grid-template-columns: 1fr;
@@ -7,19 +34,21 @@
 }
 
 .head_container {
-	background-image: linear-gradient(to bottom, rgba(110, 53, 0, 0.52), rgba(44, 25, 7, 0.73)), url('adventure.jpg');
+	background-image: linear-gradient(to bottom, rgba(0, 2, 33, 0.55), rgba(0, 2, 33, 0.80)), url('adventure.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
-	
+
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr;
 }
 
 .bar {
-	background-color: #639cd9;
+	background-color: #1a203f;
+	z-index: 1;
+	box-shadow: 0 0 20px black;
 }
 
 .body_container {
@@ -30,19 +59,24 @@
 }
 
 .body_container_about {
-
+	background: #101427;
+	padding: 2vw;
 }
 
 .body_container_info {
-
+	background: #13172e;
+	padding: 2vw;
 }
 
 .body_container_expertise {
-
+	background: #101427;
+	padding: 2vw;
 }
 
 .body_container_resume {
 	grid-column: 1/4;
+	background: #0d101f;
+	padding: 2vw;
 }
 
 
