--- a/style.css
+++ b/style.css
@@ -1,5 +1,40 @@
 a {
-	color: #ffd03f;
+	color: #199cdc;
+}
+
+h2 {
+	color: #8c8c8c;
+	font-family: Verdana;
+	font-weight: bold; 
+}
+
+h4 {
+	color: #333333;
+	font-family: Arial, san-serif;
+	font-weight: normal; 
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 2em;
+}
+
+li {
+	padding: 0.3em
+}
+
+.color_flag {
+	background: #199cdc;
+	width: 2.5vw;
+	height: 0.3vh;
+}
+
+.text_content {
+	color: #777777;
+	font-family: Arial, san-serif;
+	font-weight: normal; 
 }
 
 .name {
@@ -11,10 +46,11 @@ a {
 .explanation {
 	font-family: Verdana;
 }
+
 .head_container_contact div {
 	position: relative;
 	right: -10vw;
-	top:47vh;
+	top: 47vh;
 
 	font-family: Verdana;
 }
@@ -29,16 +65,16 @@ a {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 60vh 7vh 1fr;
-	height: 100vh;
-	color: white;
+	height: 100vh;	
 }
 
 .head_container {
-	background-image: linear-gradient(to bottom, rgba(0, 2, 33, 0.55), rgba(0, 2, 33, 0.80)), url('adventure.jpg');
+	background-image: linear-gradient(to bottom, rgba(72, 72, 72, 0.65), rgba(60, 60, 60, 0.85)), url('images/adventure.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
+	color: white;
 
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -46,36 +82,35 @@ a {
 }
 
 .bar {
-	background-color: #1a203f;
+	background: #e8e8e8;
 	z-index: 1;
 	box-shadow: 0 0 20px black;
 }
 
 .body_container {
-	background-color: #342056;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
 }
 
 .body_container_about {
-	background: #101427;
+	background: #f5f5f5;
 	padding: 2vw;
 }
 
 .body_container_info {
-	background: #13172e;
+	background: #f0f0f0;
 	padding: 2vw;
 }
 
 .body_container_expertise {
-	background: #101427;
+	background: #f5f5f5;
 	padding: 2vw;
 }
 
 .body_container_resume {
 	grid-column: 1/4;
-	background: #0d101f;
+	background: #e8e8e8;
 	padding: 2vw;
 }
 
